Modify links and delete stuff

--- a/nix-distrobox/Dockerfile
+++ b/nix-distrobox/Dockerfile
@@ -3,7 +3,7 @@ FROM quay.io/toolbx-images/alpine-toolbox:edge
 LABEL com.github.containers.toolbox="true" \
       usage="This image is meant to be used with the toolbox or distrobox command" \
       summary="alpine with nix on it" \
-      maintainer="dnkmmr69420"
+      maintainer="percygt"
       
 RUN   apk update && \
       apk upgrade && \
@@ -12,7 +12,7 @@ RUN   apk update && \
 RUN   ln -sf /bin/sh /usr/bin/sh && \
       ln -sf /bin/bash /usr/bin/bash
       
-RUN   wget -P /opt https://raw.githubusercontent.com/dnkmmr69420/nix-installer-scripts/main/nix-distrobox/nix-check && \
+RUN   wget -P /opt https://raw.githubusercontent.com/percygt/nix-installer-scripts/main/nix-distrobox/nix-check && \
       chmod a+x /opt/nix-check
       
 ENTRYPOINT  /opt/nix-check
